added devDependencies: nodemon 2.0.4. Also added seed script and seeds folder

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "node server.js",
+        "seed": "node seeds/index.js"
     },
     "repository": {
         "type": "git",
@@ -27,5 +28,8 @@
         "handlebars": "^4.7.6",
         "mysql2": "^2.2.5",
         "sequelize": "^6.3.5"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4"
     }
 }
