--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express-session": "^1.17.1",
         "handlebars": "^4.7.6",
         "mysql2": "^2.2.5",
+        "openai": "^3.1.0",
         "sequelize": "^6.3.5"
     },
     "devDependencies": {
